<resources>
    <string name="app_name">Thisable</string>
    <string name="label_version">v.0.0.1</string>
    <string name="action_login_with_google">Masuk dengan Google</string>
    <string name="label_welcome_enablers">Selamat Datang, Enablers!</string>
    <string name="label_message_for_enablers">Salam hangat dari kami untuk para pengguna aplikasi ini, Enablers.</string>
    <string name="action_lanjut">Lanjut</string>
    <string name="action_finish">Selesai</string>
    <string name="label_name">Gilang Martadinata</string>
    <string name="label_welcome">Selamat Datang!</string>
    <string name="label_feature">Fitur</string>
    <string name="ketentuan_layanan"><u>Ketentuan Layanan</u></string>
    <string name="label_pendeteksi_teks">Pendeteksi Teks</string>
    <string name="label_pendeteksiTulisTangan">Pendeteksi Tulis Tangan</string>
    <string name="label_profile">Profile</string>
    <string name="label_email">gilangmarta@gmail.com</string>
    <string name="label_bantuan">Bantuan</string>
    <string name="label_tentangThisable">Tentang Thisable</string>
    <string name="action_logout">Keluar</string>
    <string name="label_ketentuanLayanan">Ketentuan Layanan</string>
    <string name="par_ketentuanLayanan"><b>Syarat &amp; Ketentuan</b>\nDiperbarui pada 2022-06-10\n\n<b>Ketentuan Umum</b>\nDengan mengakses dan melakukan pemesanan dengan , Anda mengonfirmasi bahwa Anda setuju dan terikat dengan persyaratan layanan yang tercantum dalam Syarat &amp; Ketentuan yang diuraikan di bawah ini. Persyaratan ini berlaku untuk seluruh situs web dan email atau jenis komunikasi lainnya antara Anda.\n\nDalam keadaan apa pun tim tidak bertanggung jawab atas segala kerusakan langsung, tidak langsung, khusus, insidental atau konsekuensial, termasuk, namun tidak terbatas pada, kehilangan data atau keuntungan, yang timbul dari penggunaan, atau ketidakmampuan untuk menggunakan, materi di situs ini. , bahkan jika tim atau perwakilan resmi telah diberitahu tentang kemungkinan kerusakan tersebut. Jika penggunaan Anda atas materi dari situs ini mengakibatkan perlunya servis, perbaikan, atau koreksi peralatan atau data, Anda menanggung semua biayanya.\n\nTidak akan bertanggung jawab atas hasil apa pun yang mungkin terjadi selama penggunaan sumber daya kami. Kami berhak untuk mengubah harga dan merevisi kebijakan penggunaan sumber daya setiap saat.\n\n<b>Lisensi</b>\nThisable memberi Anda lisensi terbatas yang dapat dibatalkan, non-eksklusif, tidak dapat dialihkan, untuk mengunduh, menginstal, dan menggunakan layanan kami secara ketat sesuai dengan ketentuan Perjanjian ini. Syarat &amp; Ketentuan ini adalah kontrak antara Anda dan Thisable (dalam Syarat &amp; Ketentuan ini disebut sebagai "Thisable", atau "milik kami"), penyedia situs web Thisable dan layanan yang dapat diakses dari situs web Thisable (yang secara bersama-sama disebut dalam Syarat &amp; Ketentuan ini sebagai "Layanan Thisable").\n\nAnda setuju untuk terikat dengan Syarat &amp; Ketentuan ini. Jika Anda tidak menyetujui Syarat &amp; Ketentuan ini, mohon untuk tidak menggunakan Layanan. Dalam Syarat &amp; Ketentuan ini, "Anda" merujuk kepada Anda sebagai individu dan entitas yang Anda wakili. Jika Anda melanggar salah satu dari Syarat &amp; Ketentuan ini, kami berhak untuk membatalkan akun Anda atau memblokir akses ke akun Anda tanpa pemberitahuan.\n\n\n\n\n\n\n
    </string>
    <string name="label_teksTerdeteksi">Belum ada gambar.</string>
    <string name="label_hasilTeksTerdeteksi">Harap mengambil foto teks terlebih dahulu.</string>
    <string name="label_hasilTulisTanganTerdeteksi">Harap mengambil foto tulis tangan terlebih dahulu.</string>
    <string name="par_tentangThisable"><b>Thisable</b>\nThisable adalah start-up aplikasi aksesibilitas terpusat pertama di Indonesia. Kami memiliki tujuan untuk menyediakan layanan aplikasi aksesibilitas mobile kepada masyarakat Indonesia, terutama penyandang disabilitas untuk memudahkan difabel dalam berkomunikasi dan menjalani kehidupan sehari-hari.\n\nKami berusaha untuk memecahkan masalah nyata di masyarakat, terutama untuk kenyamanan para penyandang disabilitas untuk berinteraksi. Kami ingin memperjuangkan kesetaraan komunikasi, terlepas dari kekurangan apa yang dimiliki seseorang. Kami juga berencana untuk mengembangkan aplikasi ini menjadi aplikasi super aksesibilitas yang lebih canggih sehingga dapat digunakan oleh penyandang disabilitas khususnya di Indonesia.</string>
    <string name="default_web_client">581624492106-dskuu0pqlausmtn911fb59mjlsrab6u3.apps.googleusercontent.com</string>
    <string name="message_information">Informasi</string>
    <string name="message_logout_confirmation">Anda yakin ingin keluar?</string>
    <string name="label_ambilFoto">Ambil Foto</string>
    <string name="message_failed_take_picture">Gagal ambil gambar.</string>
    <string name="message_not_permitted">Izin ditolak!</string>
    <string name="label_detect">Deteksi Teks</string>
</resources>