<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/tb_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_baseline_chevron_left_24"
        android:title="@string/label_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfilePage"
        android:layout_width="@dimen/dimen_124dp"
        android:layout_height="@dimen/dimen_124dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:src="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_profile" />

    <TextView
        android:id="@+id/tvFullName"
        style="@style/TextContent.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/label_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imgProfilePage"
        app:layout_constraintStart_toStartOf="@+id/imgProfilePage"
        app:layout_constraintTop_toBottomOf="@+id/imgProfilePage" />

    <TextView
        android:id="@+id/tvFullEmail"
        style="@style/TextContent.SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFullName" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnTentangThisable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16sp"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullEmail">

        <ImageView
            android:id="@+id/imgIconThisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_thisable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleThisable"
            style="@style/TextContent.SmallBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/label_tentangThisable"
            app:layout_constraintBottom_toBottomOf="@id/imgIconThisable"
            app:layout_constraintStart_toEndOf="@id/imgIconThisable"
            app:layout_constraintTop_toTopOf="@id/imgIconThisable" />

        <ImageView
            android:id="@+id/imgButtonThisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="@+id/imgIconThisable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgIconThisable" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogout"
        style="@style/ButtonContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:background="@drawable/bg_button"
        android:text="@string/action_logout"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btnTentangThisable" />


</androidx.constraintlayout.widget.ConstraintLayout>