<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeWithName"
        style="@style/TextContent.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16sp"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:text="@string/label_welcome"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:src="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="@+id/tvWelcomeWithName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWelcomeWithName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeWithName"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeWithName"
        tools:listitem="@layout/item_layout_banner" />

    <TextView
        android:id="@+id/tvFeatureTitle"
        style="@style/TextContent.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24sp"
        android:layout_marginTop="30dp"
        android:text="@string/label_feature"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBanner" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="@dimen/dimen_16dp"
        android:rowCount="1"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/tvFeatureTitle">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnPendeteksiTeks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardCornerRadius="@dimen/dimen_16dp"
            app:contentPadding="@dimen/dimen_16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_text_detection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:maxLines="2"
                    android:text="@string/label_pendeteksi_teks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnPendeteksiTulisTangan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            app:cardCornerRadius="@dimen/dimen_16dp"
            app:contentPadding="@dimen/dimen_16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_tulistangan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:text="@string/label_pendeteksiTulisTangan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>